[package]
name = "aion-monitoring"
version = "0.1.0"
edition = "2021"
authors = ["AION Team <team@aion.dev>"]
description = "Comprehensive monitoring and observability stack for AION platform"
license = "MIT OR Apache-2.0"

[dependencies]
aion-core = { path = "../aion-core" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
tracing-opentelemetry = "0.21"
anyhow = "1.0"
thiserror = "1.0"

# Web server and API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "compression"] }
hyper = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Database and persistence
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "mysql", "sqlite", "json", "uuid", "chrono", "decimal"] }
redis = { version = "0.24", features = ["tokio-comp", "json", "cluster", "streams"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }

# Time series databases
influxdb = "0.7"
prometheus = "0.13"
clickhouse = "0.11"

# Metrics and telemetry
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
opentelemetry = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-prometheus = "0.14"
opentelemetry-jaeger = "0.20"
opentelemetry-zipkin = "0.19"
opentelemetry-datadog = "0.9"
opentelemetry-honeycomb = "0.1"

# Distributed tracing
jaeger = "0.20"
zipkin = "0.4"
datadog-tracing = "0.3"

# Logging
log = "0.4"
env_logger = "0.10"
slog = "2.7"
slog-json = "2.6"
slog-async = "2.8"
flexi_logger = "0.27"

# Real-time streaming
kafka = "0.9"
pulsar = "6.0"
nats = "0.24"
redis-streams = "0.1"

# Message queues
lapin = "2.3"
amqp = "1.1"
rumqttc = "0.24"

# Alerting and notifications
lettre = { version = "0.11", features = ["smtp-transport", "rustls-tls", "builder"] }
slack-hook = "0.8"
discord = "0.12"
telegram-bot = "0.8"
twilio = "0.3"
sendgrid = "0.19"
mailgun = "0.11"

# Dashboard and visualization
plotters = "0.3"
egui = "0.24"
iced = "0.10"
yew = "0.21"

# Machine learning and anomaly detection
candle-core = "0.3"
candle-nn = "0.3"
smartcore = "0.3"
linfa = "0.7"
ndarray = "0.15"

# System monitoring
sysinfo = "0.30"
systemstat = "0.2"
procfs = "0.16"
psutil = "3.2"

# Network monitoring
pcap = "1.0"
pnet = "0.34"
netstat2 = "0.9"

# Performance profiling
pprof = "0.12"
perf-event = "0.4"
criterion = "0.5"

# Statistical analysis
statrs = "0.16"
statistical = "1.0"
outliers = "0.2"

# Configuration
config = "0.14"
clap = { version = "4.4", features = ["derive", "env"] }
validator = { version = "0.16", features = ["derive"] }

# Security and authentication
jsonwebtoken = "9.2"
ring = "0.17"
argon2 = "0.5"

# Compression and serialization
flate2 = "1.0"
lz4 = "1.24"
zstd = "0.13"
bincode = "1.3"
rmp-serde = "1.1"

# Async utilities
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"

# File system and I/O
walkdir = "2.4"
tempfile = "3.8"
notify = "6.1"

# Mathematical operations
num-traits = "0.2"
ordered-float = "4.2"

# Template engines
tera = "1.19"
handlebars = "4.5"
askama = "0.12"

# Rate limiting and circuit breaker
governor = "0.6"
circuit-breaker = "0.3"

# Health checks
health-check = "0.2"

# Testing and mocking
mockall = "0.12"
wiremock = "0.5"
testcontainers = "0.15"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
criterion = "0.5"
proptest = "1.4"

[features]
default = ["prometheus", "jaeger", "influxdb", "grafana", "elastic"]
prometheus = ["metrics-exporter-prometheus", "opentelemetry-prometheus"]
jaeger = ["opentelemetry-jaeger", "jaeger"]
zipkin = ["opentelemetry-zipkin", "zipkin"]
datadog = ["opentelemetry-datadog", "datadog-tracing"]
honeycomb = ["opentelemetry-honeycomb"]
elastic = ["elasticsearch"]
influxdb = ["influxdb"]
clickhouse = ["clickhouse"]
grafana = []
kibana = []
splunk = []
new-relic = []
dynatrace = []
appdynamics = []
machine-learning = ["candle-core", "candle-nn", "smartcore", "linfa"]
anomaly-detection = ["machine-learning", "statrs", "outliers"]
real-time-analytics = ["kafka", "pulsar", "nats"]
advanced-visualization = ["plotters", "egui", "iced"]
security-monitoring = ["ring", "argon2", "jsonwebtoken"]
network-monitoring = ["pcap", "pnet", "netstat2"]
system-monitoring = ["sysinfo", "systemstat", "procfs", "psutil"]
performance-profiling = ["pprof", "perf-event", "criterion"]
distributed-tracing = ["jaeger", "zipkin", "datadog"]
log-aggregation = ["slog", "flexi_logger", "env_logger"]
alerting = ["lettre", "slack-hook", "discord", "telegram-bot"]
dashboard = ["yew", "iced", "egui"]
enterprise = ["machine-learning", "anomaly-detection", "advanced-visualization", "security-monitoring"]

[[bin]]
name = "aion-monitoring"
path = "src/bin/main.rs"

[[bin]]
name = "aion-metrics-collector"
path = "src/bin/metrics_collector.rs"

[[bin]]
name = "aion-log-aggregator"
path = "src/bin/log_aggregator.rs"

[[bin]]
name = "aion-alert-manager"
path = "src/bin/alert_manager.rs"

[[bin]]
name = "aion-dashboard-server"
path = "src/bin/dashboard_server.rs"