[package]
name = "aion-monitoring"
version = "0.1.0"
edition = "2021"
authors = ["AION Team <team@aion.dev>"]
description = "Real-time monitoring system for AION platform"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
anyhow = "1.0"
thiserror = "1.0"

# Web server for WebSocket
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
futures = "0.3"
rand = "0.8"

# Collections - using standard library

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "aion-test-runner"
path = "src/bin/test_runner.rs"