[package]
name = "aion-monitoring"
version = "0.1.0"
edition = "2021"
authors = ["AION Team <team@aion.dev>"]
description = "Real-time monitoring system for AION platform"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
anyhow = "1.0"
thiserror = "1.0"

# Web server for WebSocket and HTTP metrics
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
futures = "0.3"
rand = "0.8"

# Prometheus metrics - ROADMAP Task 1.1
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# OpenTelemetry tracing - ROADMAP Task 1.5
opentelemetry = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["http-proto", "reqwest-client"] }
tracing-opentelemetry = "0.22"

# HTTP client for tests
reqwest = { version = "0.12", optional = true }

[dev-dependencies]
tokio-test = "0.4"
reqwest = "0.12"

[features]
default = []
testing = ["reqwest"]

[[bin]]
name = "aion-test-runner"
path = "src/bin/test_runner.rs"
