[package]
name = "aion-optimization-engine"
version = "0.1.0"
edition = "2021"
authors = ["Ectus-R Team"]
description = "Advanced optimization engine with machine learning capabilities"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["postgres", "uuid", "chrono", "runtime-tokio-rustls"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Machine Learning dependencies
candle-core = "0.3"
candle-nn = "0.3"
candle-transformers = "0.3"
ndarray = "0.15"
linfa = "0.7"
linfa-linear = "0.7"
linfa-clustering = "0.7"
smartcore = "0.3"

# Statistics and analysis
statrs = "0.16"
rand = "0.8"
ordered-float = "4.1"

# Performance monitoring
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Configuration
config = "0.13"
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"