[package]
name = "aion-server"
version = "1.0.0"
edition = "2021"
description = "AION-R Enterprise Platform Server"
authors = ["Yatrogenesis <info@yatrogenesis.com>"]

[dependencies]
# Core framework
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Authentication
jsonwebtoken = "9.0"
argon2 = "0.5"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Internal crates (commented out until they exist)
# aion-auth = { path = "../aion-auth" }
# aion-ai-engine = { path = "../aion-ai-engine" }
# aion-database = { path = "../aion-database" }

[dev-dependencies]
tokio-test = "0.4"
