[package]
name = "gateway-service"
version = "1.0.0"
edition = "2021"

[dependencies]
aion-core = { path = "../../crates/aion-core" }
aion-api-gateway = { path = "../../crates/aion-api-gateway" }

tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"